Bug 121013 - External tool with dialog for updating input fields opens together with the internal one
Summary: External tool with dialog for updating input fields opens together with the i...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
6.2.0.0.alpha1+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:6.2.0
Keywords:
Depends on:
Blocks:
 
Reported: 2018-10-29 11:08 UTC by Ilhan Yesil
Modified: 2018-10-29 19:10 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ilhan Yesil 2018-10-29 11:08:52 UTC
Description:
If an external tool opens a dialog for updating input fields, it should be able to suppress opening the internal one.

Steps to Reproduce:
1. Add an external tool to libreoffice, that has the functionality to update input fields with a dialog.
2. Open a writer document with input fields.

Actual Results:
The internal dialog will be opened together with the external one.

Expected Results:
Only the external dialog should be opened.


Reproducible: Always


User Profile Reset: No



Additional Info:
Comment 1 Ilhan Yesil 2018-10-29 11:09:21 UTC
Problem is already fixed.
Comment 2 Commit Notification 2018-10-29 16:55:50 UTC
Ilhan Yesil committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/b8e260a9372de9ee1186e1f78ade29717e9b8026%5E%21

tdf#121013 External tool opens it's own dialog to update input fields

It will be available in 6.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.