tdf#121013 External tool opens it's own dialog to update input fields

Instead calling function SwWrtShell::UpdateInputFields directly, use
an UNO command, so an external tool can catch the UNO call.

Change-Id: I978487e94b6f82a75b008bfcdc20bb025dc610f7
Reviewed-on: https://gerrit.libreoffice.org/62502
Tested-by: Jenkins
Reviewed-by: Thorsten Behrens <Thorsten.Behrens@CIB.de>